# terrain

./: .gitignore  Cargo.toml
assets/: result.gltf
src/: 4  cube.rs  grid.rs  init.rs  lib.rs  main.rs
src/noise/: perlin.rs  perlin.wgsl  perlin_cpu.rs  poisson_disc.rs
src/player/: camera_controller.rs  cursor.rs  player.rs  player_attack.rs  player_input.rs  player_state.rs
src/player/config/: player_config.rs  serde.rs  serde_mouse.rs
src/player/inventory/: hud.rs  inventory.rs  items.rs
src/player/state/: player_state.rs  serde.rs  serde_keyboard.rs
src/simulation/: physics.rs  sun.rs  world.rs
src/simulation/ballistics/: ammunition.rs
src/terrain/: chunks.rs  collision.rs  grid.rs
src/terrain/props/: props.rs
src/terrain/props/trees/: tree.rs
