[package]
name = "terrain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bevy = "0.16.1"
bevy_rapier3d = "0.31.0"
bytemuck = "1.23.2"
futures-intrusive = "0.5.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
sysinfo = "0.37.1"
tokio = "1.47.1"
tracing = "0.1.41"
wgpu = "26.0.1"

[features]
debug = []
